Update species importer script

--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -84,9 +84,10 @@
             {% if update %}
                 <div class="form-group row">
                     <div class="col-lg-12">
-                        <a href="/fish-form/?siteId={{ site_id }}" class="btn btn-info">Add Fish</a>
-                        <a href="/invert-form/?siteId={{ site_id }}" class="btn btn-info">Add Invertebrate</a>
-                        <a href="/sass/{{ site_id }}/" class="btn btn-info">Add SASS</a>
+                        <a href="/fish-form/?siteId={{ site_id }}" class="btn btn-info">Add fish data</a>
+                        <a href="/invert-form/?siteId={{ site_id }}" class="btn btn-info">Add invertebrate data</a>
+                        <a href="/sass/{{ site_id }}/" class="btn btn-info">Add SASS data</a>
+                        <a href="/algae-form/?siteId={{ site_id }}" class="btn btn-info">Add algal data</a>
                     </div>
                 </div>
             {% endif %}
