Change cancel to create a new site

--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -366,7 +366,7 @@
                     Site <span id="nearest-site-name"></span> is within 500 metres of your site - do you wish to create a new site or use the existing site?
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Create new site</button>
                     <button type="button" class="btn btn-info" id="existing-site-button">Use the existing site</button>
                 </div>
             </div>
