--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -324,7 +324,36 @@
                         <input class="btn btn-success submit-button" type="submit" value="SAVE">
                     {% endif %}
                 {% else %}
-                    <input class="btn btn-success submit-button" type="submit" value="ADD">
+                    <div class="disclaimer" style="margin-bottom: 10px;">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="form-check">
+                                    <input class="form-check-input"
+                                           type="checkbox"
+                                           value="" id="disclaimerCheck">
+                                    <label class="form-check-label"
+                                           for="disclaimerCheck"
+                                           style="padding-top: 2px;">
+                                        {{ preferences.SiteSetting.disclaimer_form_text|urlize|linebreaks }}
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="submit-wrapper">
+                    <input class="btn btn-success submit-button" type="submit" id="submitBtn" disabled value="ADD">
+                    </div>
+                    <script>
+                        const checkbox = document.getElementById('disclaimerCheck');
+                        const submitButton = document.getElementById('submitBtn');
+                        checkbox.addEventListener('change', (event) => {
+                            if (event.target.checked) {
+                                submitButton.disabled = false;
+                            } else {
+                                submitButton.disabled = true;
+                            }
+                        })
+                    </script>
                 {% endif %}
             </div>
         </div>
