--- a/bims/templates/source_references/source_reference_page.html
+++ b/bims/templates/source_references/source_reference_page.html
@@ -92,6 +92,12 @@
         .modal-body {
             padding: 30px;
         }
+        #new-document-upload:disabled {
+            background-color: lightgrey;
+        }
+        #new-document-upload:disabled:hover {
+            background-color: lightgrey !important;
+        }
     </style>
 
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
