--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -341,7 +341,37 @@
             </tbody>
         </table>
         <div class="submit-wrapper">
-            <input type="button" name="btn" id="submitBtn" data-toggle="modal" data-target="#confirm-submit" class="btn btn-info" value="Next">
+            {% if not is_update %}
+                <div class="disclaimer" style="margin-bottom: 10px;">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox"
+                                       value="" id="disclaimerCheck">
+                                <label class="form-check-label"
+                                       for="disclaimerCheck"
+                                       style="padding-top: 12px;">
+                                    {{ preferences.SiteSetting.disclaimer_form_text|urlize|linebreaks }}
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <input type="button" name="btn" id="submitBtn" data-toggle="modal" data-target="#confirm-submit" class="btn btn-info" value="Next" disabled>
+                <script>
+                    const checkbox = document.getElementById('disclaimerCheck');
+                    const submitButton = document.getElementById('submitBtn');
+                    checkbox.addEventListener('change', (event) => {
+                        if (event.target.checked) {
+                            submitButton.disabled = false;
+                        } else {
+                            submitButton.disabled = true;
+                        }
+                    })
+                </script>
+            {% else %}
+                <input type="button" name="btn" id="submitBtn" data-toggle="modal" data-target="#confirm-submit" class="btn btn-info" value="Next">
+            {% endif %}
         </div>
 
         <div class="modal fade" id="confirm-submit" tabindex="-1" role="dialog"
