--- a/bims/static/css/form.css
+++ b/bims/static/css/form.css
@@ -11,13 +11,13 @@
     border-radius: 2px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    font-family: 'Open Sans', 'Lucida Grande', sans-serif;
+    font-family: 'Roboto Condensed', 'Lucida Grande', sans-serif;
 }
 
 .custom-form-container h1 {
     text-align: center;
     font-size: 1.8em;
-    font-family: 'Open Sans', 'Lucida Grande', sans-serif;
+    font-family: 'Roboto Condensed', 'Lucida Grande', sans-serif;
     padding-bottom: 20px;
 }
 
@@ -207,8 +207,8 @@
 }
 
 h1 {
-    color: #436461 !important;
-    border-bottom: 1px solid #436461;
+    color: #18A090 !important;
+    border-bottom: 1px solid #18A090;
 }
 
 .password-message {
