--- a/bims/static/css/bug_report_panel_style.css
+++ b/bims/static/css/bug_report_panel_style.css
@@ -32,7 +32,7 @@
 .brp-summary {
     border-top: 1px solid rgba(219, 175, 0, 0.3);
     margin-bottom: -18px;
-    #border-bottom: 1px solid #1b900d;
+    #border-bottom: 1px solid #18A090;
 }
 
 .brp-description {
