--- a/bims/static/css/navbar.css
+++ b/bims/static/css/navbar.css
@@ -13,7 +13,7 @@
 }
 
 .dropdown-menu a:active {
-    background-color: #1b900d !important;
+    background-color: #18A090 !important;
     color: #fff;
 }
 
