--- a/bims/static/css/styles.css
+++ b/bims/static/css/styles.css
@@ -19,7 +19,7 @@ header#page-header, div#page-header {
   margin-bottom: 2rem;
   padding: 1rem;
   /*border-bottom: 3px solid #9b4dca;*/
-  border-bottom: 3px solid #526B43 !important;
+  border-bottom: 3px solid #18A090 !important;
 }
 
 header#page-header h1 span, div#page-header h1 span {
@@ -92,14 +92,14 @@ div[role="main"] {
 }
 
 .import-message a.button.import {
-  background-color: #526B43 !important;
-  border-color: #526B43;
+  background-color: #18A090 !important;
+  border-color: #18A090;
   color: #fff;
   text-decoration: none;
 }
 
 .import-message a.button.import:hover {
-  background-color: #526B43 !important;
+  background-color: #18A090 !important;
   border-color: #fff;
   color: #fff;
 }
@@ -147,7 +147,7 @@ ul.pagination li a {
 
 ul.pagination li.current a {
   font-weight: bold;
-  background-color: #526B43 !important;
+  background-color: #18A090 !important;
   border-radius: 3rem;
   padding: 0.3rem 0.8rem;
   color: #fff;
@@ -176,7 +176,7 @@ form.batch-import-form .form-actions {
 
 form.batch-import-form .form-actions .cancel {
   color: #fff;
-  background-color: #526B43 !important;
+  background-color: #18A090 !important;
 }
 
 form.batch-import-form .errorlist {
