--- a/bims/templates/tracking/dashboard.html
+++ b/bims/templates/tracking/dashboard.html
@@ -11,11 +11,11 @@
             background-color: #9b4dca;
             border: 0.1rem solid #9b4dca;
             border-radius: .4rem;
-            color: #526B43 !important;
+            color: #18A090 !important;
 
             background-color: white !important;
-            color: #526B43 !important;
-            border: 0.1rem solid #526B43 !important;
+            color: #18A090 !important;
+            border: 0.1rem solid #18A090 !important;
         }
 
     </style>
