--- a/sass/static/css/form_page.css
+++ b/sass/static/css/form_page.css
@@ -117,7 +117,7 @@ td.sampled-name {
 .sass-form-close, .sass-form-upload-btn {
     float: right;
     font-size: 20pt;
-    background-color: #526B43;
+    background-color: #18A090;
     padding-left: 10px;
     padding-right: 10px;
     color: #ffffff;
@@ -133,7 +133,7 @@ td.sampled-name {
 
 .sass-form-close:hover, .sass-form-upload-btn:hover {
     cursor: pointer;
-    color: #526B43;
+    color: #18A090;
     background-color: #ffffff;
 }
 
