--- a/bims/static/css/navbar_geonode.css
+++ b/bims/static/css/navbar_geonode.css
@@ -224,6 +224,6 @@ body {
 }
 
 .dropdown-menu a:active {
-    background-color: #1b900d !important;
+    background-color: #18A090 !important;
     color: #fff !important;
 }
