--- a/bims/static/css/non_validated_list.css
+++ b/bims/static/css/non_validated_list.css
@@ -20,7 +20,7 @@ tr:nth-child(odd) {background: #f5f5f5}
 }
 
 .validate-action:hover {
-    color: #1b900d;
+    color: #18A090;
 }
 
 .reject-action {
@@ -99,7 +99,7 @@ select {
 
 #message-success {
     background: #eaffe8 !important;
-    border: 1px solid #1b900d !important;
+    border: 1px solid #18A090 !important;
     border-radius: 5px;
     text-align: center !important;
     position: fixed;
