--- a/td_biblio/templates/_layouts/base.html
+++ b/td_biblio/templates/_layouts/base.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div id="page-header">
             <h1>
-                <a href="#" class="not-active" style="color: #526B43 !important;">
+                <a href="#" class="not-active" style="color: #18A090 !important;">
                     Bibliography
                 </a>
                 <span>
