--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" />
     <title>{% block title %} {{ APPLICATION_NAME }} | {% block subtitle %}{% endblock %} {% endblock %}</title>
 
     <link href="{% static "js/libs/bootstrap-4.0.0/css/bootstrap.min.css" %}" rel="stylesheet">
