--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -422,7 +422,7 @@
                             Occurrence Data
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="occurrence-data">
+                                data-datac="occurrence-data" data-title="Occurrence data">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
@@ -478,18 +478,23 @@
                     </div>
                     <div class="card-body">
                         <div id="data-summary">
-                            <div class="row species-ssdd-legends">
+                            <div class="row">
                                 <div class="col-1"></div>
-                                <div class="col-2 species-ssdd-legend"
-                                     id="species-ssdd-origin-legend"></div>
-                                <div class="col-2 species-ssdd-legend"
-                                     id="species-ssdd-endemism-legend"></div>
-                                <div class="col-2 species-ssdd-legend"
-                                     id="species-ssdd-cons_status-legend"></div>
-                                <div class="col-2 species-ssdd-legend"
-                                     id="species-ssdd-sampling_method-legend"></div>
-                                <div class="col-2 species-ssdd-legend"
-                                     id="species-ssdd-biotope-legend"></div>
+                                <div class="col-2 ssdd-titles">
+                                    Origin
+                                </div>
+                                <div class="col-2 ssdd-titles">
+                                    Endemism
+                                </div>
+                                <div class="col-2 ssdd-titles">
+                                    Conservation Status
+                                </div>
+                                <div class="col-2 ssdd-titles">
+                                    Sampling Method
+                                </div>
+                                <div class="col-2 ssdd-titles">
+                                    Biotope
+                                </div>
                                 <div class="col-1"></div>
                             </div>
                             <div class="row">
@@ -511,23 +516,18 @@
                                 </div>
                                 <div class="col-1 col-chart"></div>
                             </div>
-                            <div class="row">
+                            <div class="row species-ssdd-legends">
                                 <div class="col-1"></div>
-                                <div class="col-2 ssdd-titles">
-                                    Origin
-                                </div>
-                                <div class="col-2 ssdd-titles">
-                                    Endemism
-                                </div>
-                                <div class="col-2 ssdd-titles">
-                                    Conservation Status
-                                </div>
-                                <div class="col-2 ssdd-titles">
-                                    Sampling Method
-                                </div>
-                                <div class="col-2 ssdd-titles">
-                                    Biotope
-                                </div>
+                                <div class="col-2 species-ssdd-legend"
+                                     id="species-ssdd-origin-legend"></div>
+                                <div class="col-2 species-ssdd-legend"
+                                     id="species-ssdd-endemism-legend"></div>
+                                <div class="col-2 species-ssdd-legend"
+                                     id="species-ssdd-cons_status-legend"></div>
+                                <div class="col-2 species-ssdd-legend"
+                                     id="species-ssdd-sampling_method-legend"></div>
+                                <div class="col-2 species-ssdd-legend"
+                                     id="species-ssdd-biotope-legend"></div>
                                 <div class="col-1"></div>
                             </div>
                         </div>
