--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -378,6 +378,32 @@
     </div>
 </script>
 
+<script type="text/html" id="third-party-layer-panel-template">
+    {# lasso control container #}
+    <div class="third-party-control-container map-control-panel-box">
+        <div class="row">
+            <div class="col-md-12" style="padding-right: 0">
+                <span class="title">
+                    THIRD PARTY LAYER
+                </span>
+                <div class="close-button map-result-close pull-right">
+                    <img class="close-icon" src="/static/img/close_icon.svg">
+                </div>
+            </div>
+        </div>
+        <div class="row content" style="border-top: 1px solid darkgray; margin-top: 3px">
+            <ul id="third-party-options" style="width:100%; height: 50px;">
+                <li data-name="MiniSASS">
+                    <div class="row-title">
+                        <input type="checkbox" value="MiniSASS" class="mini-sass-check">
+                        MiniSASS
+                    </div>
+                </li>
+            </ul>
+    </div>
+</script>
+
+
 <script type="text/html" id="spatial-filter-panel">
     <div class="row sub-filter content spatial-scale-menu">
         <div class="col-lg-12 subtitle">
@@ -543,6 +569,12 @@
              data-placement="right" data-trigger="hover"
              data-content="Layer Selector">
             <i class="fa fa-map" aria-hidden="true"></i>
+        </div>
+        <div id="third-party-layer-control" class="third-party-layer-control sub-control-panel"
+        data-toggle="popover"
+             data-placement="right" data-trigger="hover"
+             data-content="Third-party Layer Selector">
+            <i class="fa fa-map-o" aria-hidden="true"></i>
         </div>
         <div id="locate-control" class="locate-control sub-control-panel"
         data-toggle="popover"
