--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -1,6 +1,6 @@
 <script type="text/html" id="map-search-container">
     <div class="map-search-box map-control-panel-box">
-        <div class="row">
+        <div class="row search-header-row">
             <div class="col-lg-12" style="padding-right: 0">
                 <div class="close-button search-reset pull-left"
                      data-toggle="tooltip" data-placement="top"
@@ -15,7 +15,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row search-box-row">
             <div class="search-box">
                 <div class="container-1">
                     <input type="search" id="search"
@@ -25,7 +25,7 @@
             </div>
             <div id="search-error-text">Minimal 3 character or empty.</div>
         </div>
-        <div class="row">
+        <div class="row filter-header-row">
             <div class="col-lg-12 search-info">
                 Refine your search by using the filters below.
             </div>
