Update background and logout text

--- a/bims/static/css/account.css
+++ b/bims/static/css/account.css
@@ -2,6 +2,8 @@ body {
     padding-top: 70px;
     padding-bottom : 140px;
     background-image: url('../img/Login_Background.jpg');
+    background-size:     cover;
+    background-position: center top;
 }
 
 .align-bottom {
