--- a/bims/templates/account/logout.html
+++ b/bims/templates/account/logout.html
@@ -35,7 +35,8 @@
             <div class="container">
 
                 <div class="custom-form-container">
-                    <p>{% trans 'Are you sure you want to log out?' %}</p>
+                    <p style="font-size:12pt">{% trans 'Are you sure you want to log out?' %}</p>
+                    <br/><br/>
                     <form class="logout" method="POST" action="{% url 'account_logout' %}">{% csrf_token %}
                         {% if redirect_field_value %}
                             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
